--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Products | ByteBazaar</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
     />
   </head>
-  <body>
-    <div class="container">
-      <%- include('partials/header') %>
-      
-      
-      <main>
-        <div class="product-container">
-          <% for (let i = 0; i < products.length; i++) { %>
-            <%- include('partials/productCard', {product: products[i]}) %>
-          <% } %>
+  <body class="">
+    <%- include('partials/header') %>
+
+    <main class="container my-4">
+      <div class="row g-4">
+        <% for (let i = 0; i < products.length; i++) { %>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex">
+          <%- include('partials/productCard', { product: products[i] }) %>
         </div>
-      </main>
-      <%- include('partials/footer') %>
-    </div>
-    <script src="js/cart.js"></script>
+        <% } %>
+      </div>
+    </main>
+
+    <%- include('partials/footer') %>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
