--- a/src/views/partials/productCard.ejs
+++ b/src/views/partials/productCard.ejs
@@ -1,12 +1,12 @@
-<div class="card">
-  <img src="<%= product.image || '/img/product-placeholder.jpg' %>" alt="<%= product.name %>">
-  <div class="card-body">
+<div class="card h-100 w-100">
+  <img
+    src="<%= product.image %>"
+    class="card-img-top h-50"
+    alt="<%= product.name %>"
+  />
+  <div class="card-body d-flex flex-column">
     <h5 class="card-title"><%= product.name %></h5>
-    <p class="card-text"><%= product.description ? product.description.substring(0, 100) + (product.description.length > 100 ? '...' : '') : 'No description available' %></p>
-    <p class="card-price">$<%= typeof product.price === 'number' ? product.price.toFixed(2) : product.price %></p>
-    <div class="card-actions">
-      <a href="/product/<%= product.id %>" class="view-details">View Details</a>
-      <button onclick="addToCart('<%= product.id %>')">Add To Cart</button>
-    </div>
+    <p class="card-text overflow-hidden"><%= product.description %></p>
+    <a href="#" class="btn btn-dark mt-auto">Add To Cart</a>
   </div>
 </div>
