--- a/src/views/account.ejs
+++ b/src/views/account.ejs
@@ -72,7 +72,7 @@
       <div class="card border-0 shadow-sm rounded-4 mb-4">
         <div class="card-body p-4">
           <h5 class="card-title fw-semibold mb-4">Change Password</h5>
-          <form>
+          <form id="password-form">
             <div class="mb-3">
               <label for="currentPassword" class="form-label"
                 >Current Password</label
