--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,10 +1,6 @@
-<footer>
-  <div class="footer-container">
+<footer class="bg-white text-center border-top pt-2">
+  <div class="container">
     <p>&copy; <%= new Date().getFullYear() %> Techno. All rights reserved.</p>
-    <div class="footer-links">
-      <a href="/about">About</a>
-      <a href="/contact">Contact</a>
-      <a href="/privacy">Privacy</a>
-    </div>
+    <p>Made By <a href="https://github.com/Ahmad-AlaaEdin">Ahmad</a></p>
   </div>
 </footer>
