--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse py-3" id="navbarSupportedContent">
       <!-- Search Form -->
 
       <form class="d-flex me-auto" role="search" action="/" method="GET">
