--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom shadow-sm">
   <div class="container">
-    <a class="navbar-brand fw-bold text-dark" href="/">Techno</a>
+    <a class="navbar-brand fs-1  fw-bold text-dark" href="/">Techno</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse py-3" id="navbarSupportedContent">
       <!-- Search Form -->
 
-      <form class="d-flex me-auto" role="search" action="/" method="GET">
+      <form class="d-flex m-auto" role="search" action="/" method="GET">
         <input
           class="form-control me-2 border rounded-pill"
           type="search"
@@ -30,7 +30,24 @@
       </form>
       <!-- Nav Items -->
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
-        <% if(user){ %>
+        <% if(locals.user){ %>
+        <!-- Cart Icon - Only shown when user is logged in -->
+        <li class="nav-item me-3">
+          <a class="nav-link position-relative" href="/cart">
+            <i class="bi bi-cart-fill fs-4"></i>
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger cart-count">
+              0
+            </span>
+          </a>
+        </li>
+        
+        <!-- Checkout Button - Only shown when user is logged in -->
+        <li class="nav-item me-3">
+          <a class="btn btn-primary rounded-pill" href="/checkout">
+            <i class="bi bi-credit-card me-1"></i> Checkout
+          </a>
+        </li>
+        
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-dark"
@@ -45,15 +62,15 @@
             <li><a class="dropdown-item" href="/profile">Profile</a></li>
             <li><a class="dropdown-item" href="/orders">Orders</a></li>
             <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="/logout">Logout</a></li>
           </ul>
         </li>
         <% }else{ %>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">Login</a>
+          <a class="nav-link text-dark" href="/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark" href="#">Signup</a>
+          <a class="nav-link text-dark" href="/signup">Signup</a>
         </li>
         <% } %>
       </ul>
