--- a/src/views/partials/productCard.ejs
+++ b/src/views/partials/productCard.ejs
@@ -7,6 +7,10 @@
   <div class="card-body d-flex flex-column">
     <h5 class="card-title"><%= product.name %></h5>
     <p class="card-text overflow-hidden"><%= product.description %></p>
-    <a href="#" class="btn btn-dark mt-auto">Add To Cart</a>
+    <button 
+      onclick="addToCart('<%= product.id %>')" 
+      class="btn btn-dark mt-auto add-to-cart-btn">
+      Add To Cart
+    </button>
   </div>
 </div>
