--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -30,8 +30,7 @@
       </form>
       <!-- Nav Items -->
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
-        <% if(locals.user){ %>
-        <!-- Cart Icon - Only shown when user is logged in -->
+        <!-- Cart Icon - Always shown -->
         <li class="nav-item me-3">
           <a class="nav-link position-relative" href="/cart">
             <i class="bi bi-cart-fill fs-4"></i>
@@ -40,40 +39,45 @@
             </span>
           </a>
         </li>
-        
-        <!-- Checkout Button - Only shown when user is logged in -->
-        <li class="nav-item me-3">
-          <a class="btn btn-primary rounded-pill" href="/checkout">
-            <i class="bi bi-credit-card me-1"></i> Checkout
-          </a>
-        </li>
-        
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle text-dark"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <%= user.name %>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end">
-            <li><a class="dropdown-item" href="/profile">Profile</a></li>
-            <li><a class="dropdown-item" href="/orders">Orders</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="/logout">Logout</a></li>
-          </ul>
-        </li>
-        <% }else{ %>
-        <li class="nav-item">
-          <a class="nav-link text-dark" href="/login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-dark" href="/signup">Signup</a>
-        </li>
+        <% if (user) { %>
+          <!-- Checkout button and user dropdown -->
+          <li class="nav-item me-3">
+            <a class="btn btn-primary rounded-pill" href="/checkout">
+              <i class="bi bi-credit-card me-1"></i> Checkout
+            </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle text-dark"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <%= user.name %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="/profile">Profile</a></li>
+              <li><a class="dropdown-item" href="/orders">Orders</a></li>
+              <li><hr class="dropdown-divider" /></li>
+              <li><a class="dropdown-item" href="/logout">Logout</a></li>
+            </ul>
+          </li>
+        <% } else { %>
+          <!-- Login/signup -->
+          <li class="nav-item">
+            <a class="nav-link text-dark" href="/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" href="/signup">Signup</a>
+          </li>
         <% } %>
+        
       </ul>
     </div>
   </div>
 </nav>
+<script>
+  // Expose login status to JS
+ 
+</script>
